<resources>
    <string name="app_name">Setup</string>
    <string name="start">Start</string>
    <string name="setuptext">DeviceSetupMode</string>
    <string name="start_button1">Next</string>
    <string name="over">Activate</string>
    <string name="start_toast">Hello</string>
    <string name="test">Test</string>
    <string name="start_1_text">Out!</string>
    <string name="over_toast">SetupOver!</string>
    <string name="ok">Ok</string>
    <string name="stop_bar">BarDisable!</string>
    <string name="warnings">Warning</string>
    <string name="yhz">YHZS</string>
    <string name="sut">Square</string>
    <string name="qqq">Circle</string>
    <string name="icon">Icon</string>
    <string name="bugjump">TestPreference</string>
    <string name="summary_setup">SetupSettings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>