<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/icon">
        <com.android.setup.CardPreference
            android:icon="@drawable/ic_qmo"
            android:title="@string/qqq"
            android:key="icon1" />
        <com.android.setup.CardPreference
            android:icon="@drawable/ic_sqm"
            android:title="@string/sut"
            android:key="icon2" />
        <com.android.setup.CardPreference
            android:title="@string/yhz"
            android:key="icon0" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="TestMode"
        android:key="test_mode">
        <com.android.setup.CardPreference
            android:fragment="com.android.setup.TestFragment"
            android:key="test_button"
            android:title="@string/bugjump" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>