<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen
        android:layout="@layout/lgog"
        android:selectable="false"/>
    <PreferenceCategory android:title="@android:string/unknownName">
        <com.android.setup.CardPreference
            android:title="test card no fragment"
            android:key="test145"
            android:summary="1114514"/>
        <com.android.setup.CardSwitchPreference
            android:title="114514"
            android:summary="115"/>
        <com.android.setup.CardPreference
            android:title="test card no fragment"
            android:summary="1114513"/>
        <com.android.setup.CardPreference
            android:title="test card no fragment"
            android:summary="1114515"/>
        <com.android.setup.CardPreference
            android:title="test card no fragment"
            android:summary="1114516"/>
        <com.android.setup.CardEditTextPreference
            android:title="hello"
            app:key="signature14"
            app:useSimpleSummaryProvider="true"/>
        <com.android.setup.CardListPreference
            app:defaultValue="reply1"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply1"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />
        <com.android.setup.CardSwitchPreference
            android:key="open"
            android:title="TestDowm" />
        <com.android.setup.CardSwitchPreference
            android:dependency="open"
            android:title="Hello"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>
    <PreferenceCategory android:title="PreferenceLayout">
        <Preference
            android:title="Test1"
            android:summary="@string/bugjump"
            android:key="opentest222"
            android:layout="@layout/card_preference_up" />
        <Preference
            android:title="Test2"
            android:layout="@layout/card_preference_res" />
        <Preference
            android:title="Test3"
            android:summary="@string/bugjump"
            android:layout="@layout/card_preference_down" />
    </PreferenceCategory>

</PreferenceScreen>